Updated quarto files

--- a/custom.scss
+++ b/custom.scss
@@ -1,8 +1,14 @@
 /*-- scss:defaults --*/
-$navbar-bg: #570a92;
+$navbar-bg: #300078;
 $navbar-fg: #ffffff;
 $sidebar-bg: #262626;
 $sidebar-fg: #ff7300;
 $sidebar-hl: #ffffff;
 $footer-bg: #000000;
 $footer-fg: #ffffff;
+h1, .h1, h2, .h2, h3, .h3 {
+    margin-top: 50px;
+}
+.panel-tabset {
+    margin-top: 50px;
+}
